...
    
    // MARK: - Setup
    
    private func setupUI() {
        backgroundColor = .systemBackground
        
        textView.accessibilityIdentifier = "MessageInput"
        sendButton.accessibilityIdentifier = "SendButton"
        
        layer.shadowColor = UIColor.black.cgColor
        layer.shadowOpacity = 0.05
        layer.shadowOffset = CGSize(width: 0, height: -1)
        
        addSubview(textView)
...
